--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,8 +7,8 @@ nodaemon=true
 logfile=/var/log/supervisord.log
 pidfile=/run/supervisord.pid
 
-[program:v2ray]
-command=/usr/local/v2ray/v2ray -config=/etc/v2ray/config.json
+[program:xray]
+command=/usr/local/xray/xray -config=/etc/xray/config.json
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
